--- a/package.yaml
+++ b/package.yaml
@@ -1,14 +1,14 @@
-name:                computer-architecture-bench
-version:             0.0.0.1
-github:              "ryukzak/computer-architecture-bench"
-license:             BSD-3-Clause
-author:              "Aleksandr Penskoi"
-maintainer:          "example@example.com"
-copyright:           "2024 Aleksandr Penskoi"
+name: ca-wrench
+version: 0.0.0.1
+github: "ryukzak/ca-wrench"
+license: BSD-3-Clause
+author: "Aleksandr Penskoi"
+maintainer: "aleksandr.penskoi@gmail.com"
+copyright: "2024 Aleksandr Penskoi"
 
 extra-source-files:
-- README.md
-- CHANGELOG.md
+  - README.md
+  - CHANGELOG.md
 
 # Metadata used when publishing your package
 # synopsis:            Short description of your package
@@ -17,45 +17,81 @@ extra-source-files:
 # To avoid duplicated efforts in documentation and dealing with the
 # complications of embedding Haddock markup inside cabal files, it is
 # common to point users to the README.md file.
-description:         Please see the README on GitHub at <https://github.com/githubuser/csa-bench#readme>
+description: Please see the README on GitHub
+
+default-extensions:
+  - AllowAmbiguousTypes
+  - ConstraintKinds
+  - DeriveGeneric
+  - FlexibleContexts
+  - FlexibleInstances
+  - FunctionalDependencies
+  - ImportQualifiedPost
+  - KindSignatures
+  - LambdaCase
+  - MultiParamTypeClasses
+  - NamedFieldPuns
+  - NoImplicitPrelude
+  - OverloadedStrings
+  - RankNTypes
+  - ScopedTypeVariables
+  - TupleSections
+  - TypeApplications
+  - TypeFamilies
+  - TypeOperators
+  - UndecidableInstances
 
 dependencies:
-- base >= 4.7 && < 5
-- megaparsec
-- text
+  - aeson
+  - aeson-casing
+  - base >= 4.7 && < 5
+  - data-default
+  - Diff
+  - filepath
+  - megaparsec
+  - mtl
+  - optparse-applicative
+  - pretty-simple
+  - relude
+  - split
+  - yaml
 
 ghc-options:
-- -Wall
-- -Wcompat
-- -Widentities
-- -Wincomplete-record-updates
-- -Wincomplete-uni-patterns
-- -Wmissing-export-lists
-- -Wmissing-home-modules
-- -Wpartial-fields
-- -Wredundant-constraints
+  - -Wall
+  - -Wcompat
+  - -Widentities
+  - -Wincomplete-record-updates
+  - -Wincomplete-uni-patterns
+  - -Wmissing-export-lists
+  - -Wmissing-home-modules
+  - -Wpartial-fields
+  - -Wredundant-constraints
 
 library:
   source-dirs: src
 
 executables:
-  computer-architecture-bench-exe:
-    main:                Main.hs
-    source-dirs:         app
+  wrench:
+    main: Main.hs
+    source-dirs: app
     ghc-options:
-    - -threaded
-    - -rtsopts
-    - -with-rtsopts=-N
+      - -threaded
+      - -rtsopts
+      - -with-rtsopts=-N
     dependencies:
-    - computer-architecture-bench
+      - ca-wrench
+      - gitrev
 
 tests:
-  computer-architecture-bench-test:
-    main:                Spec.hs
-    source-dirs:         test
+  ca-wrench-test:
+    main: Spec.hs
+    source-dirs: test
     ghc-options:
-    - -threaded
-    - -rtsopts
-    - -with-rtsopts=-N
+      - -threaded
+      - -rtsopts
+      - -with-rtsopts=-N
     dependencies:
-    - computer-architecture-bench
+      - ca-wrench
+      - tasty
+      - tasty-golden
+      - tasty-hunit
