--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -77,7 +77,7 @@ jobs:
       - wrench
       - haskell-formatting
       - haskell-lint
-    if: github.ref == 'refs/heads/master'
+    # if: github.ref == 'refs/heads/master'
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
@@ -106,11 +106,54 @@ jobs:
 
       - name: Build binary
         run: |
-          stack build
-          stack install --local-bin-path ./dist
+          stack build --copy-bins --local-bin-path ./dist
 
       - name: Upload Binary as Artifact
         uses: actions/upload-artifact@v4
         with:
           name: binary-${{ matrix.os }}-${{ matrix.arch }}
           path: ./dist/*
+
+  # docker-build-and-push:
+  #   name: Build and Push Docker Image
+  #   timeout-minutes: 45
+  #   needs:
+  #     - wrench
+  #     - haskell-formatting
+  #     - haskell-lint
+  #   if: github.ref == 'refs/heads/master'
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Checkout code
+  #       uses: actions/checkout@v4
+
+  #     - name: Set up QEMU
+  #       uses: docker/setup-qemu-action@v2
+
+  #     - name: Set up Docker Buildx
+  #       uses: docker/setup-buildx-action@v2
+
+  #     - name: Log in to Docker Hub
+  #       uses: docker/login-action@v2
+  #       with:
+  #         username: ${{ secrets.DOCKERHUB_USERNAME }}
+  #         password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+  #     - name: Cache Docker layers
+  #       uses: actions/cache@v4
+  #       with:
+  #         path: /tmp/.buildx-cache
+  #         key: ${{ runner.os }}-buildx-${{ github.sha }}
+  #         restore-keys: |
+  #           ${{ runner.os }}-buildx-
+
+  #     - name: Build and push Docker image
+  #       uses: docker/build-push-action@v5
+  #       with:
+  #         context: .
+  #         push: true
+  #         platforms: linux/arm64
+  #         tags: ${{ secrets.DOCKERHUB_USERNAME }}/wrench:latest
+  #         cache-from: type=local,src=/tmp/.buildx-cache
+  #         cache-to: type=local,dest=/tmp/.buildx-cache
+  #         labels: ${{ steps.meta.outputs.labels }}
