--- a/fourmolu.yaml
+++ b/fourmolu.yaml
@@ -3,7 +3,11 @@ comma-style: leading # for lists, tuples etc. - can also be 'trailing'
 record-brace-space: false # rec {x = 1} vs. rec{x = 1}
 indent-wheres: true # 'false' means save space by only half-indenting the 'where' keyword
 diff-friendly-import-export: true # 'false' uses Ormolu-style lists
-respectful: true # don't be too opinionated about newlines etc.
-haddock-style: multi-line # '--' vs. '{-'
-newlines-between-decls: 1 # number of newlines between top-level declarations
+make fnewlines-between-decls: 1 # number of newlines between top-level declarations
 single-constraint-parens: always # always | never | auto (preserve as is) - whether to style optional parentheses around single constraints
+column-limit: 120
+function-arrows: leading-args
+haddock-style: single-line
+haddock-style-module: multi-line
+let-style: inline
+respectful: false
