--- a/test/golden/risc-v-32-like/default.yaml
+++ b/test/golden/risc-v-32-like/default.yaml
@@ -3,7 +3,7 @@ memory_size: 0x90
 input_streams:
   88: []
 reports:
-  - filter: [instruction]
+  - filter: [instruction, state]
     slice: all
     inspector:
       - - [register, T0]
@@ -14,5 +14,5 @@ reports:
     slice: last
     inspector:
       - - [memory_cells, 4, 7]
-      - - [label, "numio[88]: "]
-        - [number_io_stream, 88]
+      - - [number_io_stream, 88]
+      - - [symbol_io_stream, 88]
