--- a/package.yaml
+++ b/package.yaml
@@ -104,6 +104,7 @@ executables:
             - time
             - uuid
             - wai
+            - wai-extra
             - warp
             - wrench
 
