--- a/wrench.cabal
+++ b/wrench.cabal
@@ -26,6 +26,7 @@ source-repository head
 library
   exposed-modules:
       Config
+      Isa.F32a
       Isa.RiscIv
       Machine
       Machine.Memory
