--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -70,7 +70,7 @@ jobs:
                   config_file: .markdownlint.yaml
 
     build-release:
-        name: Build and Release Binary
+        name: Build Binary
         needs:
             - wrench
             - haskell-formatting
@@ -88,9 +88,21 @@ jobs:
               uses: actions/checkout@v4
 
             - uses: actions/cache@v4
-              name: Cache ~/.stack
+              name: Cache ~/.stack (Windows)
+              if: matrix.os == 'windows-latest'
               with:
-                  path: ~/.stack
+                  path: |
+                    C:\Users\runneradmin\AppData\Local\Programs\stack
+                    D:\a\wrench\wrench\.stack-work
+                  key: ${{ runner.os }}-stack-global-${{ hashFiles('stack.yaml') }}-${{ hashFiles('package.yaml') }}
+                  restore-keys: |
+                      ${{ runner.os }}-stack-global-
+
+            - uses: actions/cache@v4
+              name: Cache ~/.stack (Unix)
+              if: matrix.os != 'windows-latest'
+              with:
+                  path: '~/.stack'
                   key: ${{ runner.os }}-stack-global-${{ hashFiles('stack.yaml') }}-${{ hashFiles('package.yaml') }}
                   restore-keys: |
                       ${{ runner.os }}-stack-global-
