Disable MD010 for codeblock (hardcode tab)

--- a/.markdownlint.yaml
+++ b/.markdownlint.yaml
@@ -2,3 +2,5 @@ MD013: false # Line length
 MD007: # Unordered list indentation
   indent: 4
 MD051: false # Link fragments should be valid
+MD010:
+  code_blocks: false
