--- a/package.yaml
+++ b/package.yaml
@@ -107,6 +107,31 @@ executables:
             - warp
             - wrench
 
+    wrench-fmt:
+        main: Fmt.hs
+        other-modules: []
+        source-dirs: app
+        ghc-options:
+            - -threaded
+            - -rtsopts
+            - -with-rtsopts=-N
+        dependencies:
+            - directory
+            - http-api-data
+            - lucid
+            - network-uri
+            - process
+            - servant
+            - servant-lucid
+            - servant-server
+            - text
+            - time
+            - uuid
+            - wai
+            - wai-extra
+            - warp
+            - wrench
+
 tests:
     wrench-test:
         main: Spec.hs
