Fix risc-iv-32: lui, addi. Details:
- Add `prepare` function to reference for directives like %hi, %lo.
- Fix: lui   x5, %hi(label) -- Load upper 20 bits of the label's address
- Fix: addi  x5, x5, %lo(label) -- Add lower 12 bits

--- a/test/golden/risc-iv-32/count.yaml
+++ b/test/golden/risc-iv-32/count.yaml
@@ -6,8 +6,7 @@ reports:
   - name: Step-by-step
     slice: all
     view: |
-      {T0} {T1} {T2} {T3} ;;
-      {pc}:	{instruction}	{pc:label} ;;
+      {pc}:	{instruction}	{T0:hex} {T1:hex} {T2:hex} {T3:hex} {pc:label}
   - name: Result
     slice: last
     view: |
