Add carry bit to acc32 for add.

--- a/test/golden/acc32/overflow.yaml
+++ b/test/golden/acc32/overflow.yaml
@@ -5,4 +5,4 @@ reports:
   - name: Step-by-step
     slice: all
     view: |
-      {pc}:	{instruction}	{pc:label} Acc: {Acc} Overflow: {V}
+      {pc}:	{instruction}	{pc:label} Acc: {Acc} Overflow: {V} Carry: {C}
