--- a/test/golden/acc32/overflow.yaml
+++ b/test/golden/acc32/overflow.yaml
@@ -6,3 +6,16 @@ reports:
     slice: all
     view: |
       {pc}:	{instruction}	{pc:label} Acc: {Acc} Overflow: {V} Carry: {C}
+    assert: |
+      16:	Load (-16)	@_start Acc: 0 Overflow: 0 Carry: 0
+      19:	Add 8	 Acc: 2147483647 Overflow: 0 Carry: 0
+      22:	Bvs 28	 Acc: -2147483648 Overflow: 1 Carry: 0
+      28:	Clv	@clean_overflow Acc: -2147483648 Overflow: 1 Carry: 0
+      29:	Add 12	 Acc: -2147483648 Overflow: 0 Carry: 0
+      32:	Clv	 Acc: 2147483647 Overflow: 1 Carry: 1
+      33:	Clc	 Acc: 2147483647 Overflow: 0 Carry: 1
+      34:	Load (-30)	 Acc: 2147483647 Overflow: 0 Carry: 0
+      37:	Add 8	 Acc: -1 Overflow: 0 Carry: 0
+      40:	Bcs 46	 Acc: 0 Overflow: 0 Carry: 1
+      46:	Clc	@clean_carry Acc: 0 Overflow: 0 Carry: 1
+      47:	Halt	 Acc: 0 Overflow: 0 Carry: 0
