Don't make binaries on work branches.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -81,6 +81,7 @@ jobs:
             - wrench
             - haskell-formatting
             - haskell-lint
+        if: github.ref == 'refs/heads/master'
         strategy:
             matrix:
                 os: [ubuntu-latest, ubuntu-24.04-arm, windows-latest, macos-latest, macos-13]
