--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -81,7 +81,7 @@ jobs:
             - wrench
             - haskell-formatting
             - haskell-lint
-        if: github.ref == 'refs/heads/master'
+        if: github.ref == 'refs/heads/master' || startsWith(github.ref, 'refs/tags/')
         strategy:
             matrix:
                 os: [ubuntu-latest, ubuntu-24.04-arm, windows-latest, macos-latest, macos-13]
@@ -125,6 +125,17 @@ jobs:
               with:
                   name: wrench-${{ runner.os }}-${{ runner.arch }}
                   path: ./dist/*
+
+            - name: Create Release
+              if: startsWith(github.ref, 'refs/tags/')
+              uses: softprops/action-gh-release@v2
+              with:
+                  tag_name: ${{ github.ref }}
+                  release_name: Release ${{ github.ref }}
+                  draft: true
+                  prerelease: false
+                  generate_release_notes: true
+                  files: ./dist/*
 
     # docker-build-and-push:
     #   name: Build and Push Docker Image
