--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -125,3 +125,15 @@ jobs:
               with:
                   name: wrench-${{ runner.os }}-${{ runner.arch }}
                   path: ./dist/*
+
+            - name: Create Release
+              if: startsWith(github.ref, 'refs/tags/')
+              uses: softprops/action-gh-release@v2
+              with:
+                  tag_name: ${{ github.ref }}
+                  name: Release ${{ github.ref }}
+                  draft: true
+                  prerelease: false
+                  generate_release_notes: true
+                  files: ./dist/*
+                  token: ${{ secrets.RELEASE_GITHUB_TOKEN }}
