--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,6 +54,25 @@ jobs:
               with:
                   version: "0.17.0.0"
 
+    html-formatting:
+      timeout-minutes: 5
+      runs-on: ubuntu-latest
+      steps:
+          - uses: actions/checkout@v4
+
+          - name: Run Prettier
+            id: prettier-run
+            uses: rutajdash/prettier-cli-action@v1.0.0
+            with:
+              file_pattern: static/**/*.html
+
+          - name: Prettier Output
+            if: ${{ failure() }}
+            shell: bash
+            run: |
+              echo "The following files are not formatted:"
+              echo "${{steps.prettier-run.outputs.prettier_output}}"
+
     markdown-formatting:
         timeout-minutes: 5
         runs-on: ubuntu-latest
