--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -79,7 +79,6 @@ jobs:
     build-binaries:
         needs:
             - wrench
-            - haskell-formatting
             - haskell-lint
         if: github.ref == 'refs/heads/master' || startsWith(github.ref, 'refs/tags/')
         strategy:
@@ -137,3 +136,45 @@ jobs:
                   generate_release_notes: true
                   files: ./dist/*
                   token: ${{ secrets.RELEASE_GITHUB_TOKEN }}
+
+    build-edge-image:
+      needs:
+        - wrench
+        - is-variants-and-tests-actual
+        - haskell-lint
+      if: github.ref == 'refs/heads/master'
+      timeout-minutes: 30
+      runs-on: ubuntu-24.04-arm
+      steps:
+        - name: Checkout code
+          uses: actions/checkout@v4
+
+        - name: Log in to Docker Hub
+          uses: docker/login-action@v2
+          with:
+            username: ${{ secrets.DOCKERHUB_USERNAME }}
+            password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+        - name: Set up QEMU
+          uses: docker/setup-qemu-action@v3
+
+        - name: Set up Docker Buildx
+          uses: docker/setup-buildx-action@v3
+
+        - name: Build and push Docker image
+          uses: docker/build-push-action@v4
+          with:
+            context: .
+            push: true
+            file: Dockerfile
+            tags: ryukzak/wrench:edge
+            platforms: linux/arm64
+            cache-from: type=local,src=/tmp/.buildx-cache
+            cache-to: type=local,dest=/tmp/.buildx-cache
+
+    deploy-edge:
+      needs:
+        build-edge-image
+      runs-on: ubuntu-latest
+      steps:
+        - run: echo "ok"
