--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -125,12 +125,21 @@ jobs:
                   name: wrench-${{ runner.os }}-${{ runner.arch }}
                   path: ./dist/*
 
+    publish-release:
+      needs: build-binaries
+      runs-on: ubuntu-latest
+      steps:
+            - uses: actions/checkout@v4
+            - uses: actions/download-artifacts@v4
+              with:
+                path: dist
+
             - name: Create Release
               if: startsWith(github.ref, 'refs/tags/')
               uses: softprops/action-gh-release@v2
               with:
                   tag_name: ${{ github.ref }}
-                  name: Release ${{ github.ref }}
+                  name: ${{ github.ref_name }}
                   draft: true
                   prerelease: false
                   generate_release_notes: true
