Generalize EDGE_BUILD to VERSION_SUFFIX

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -198,7 +198,7 @@ jobs:
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache
           build-args: |
-            EDGE_BUILD=true
+            VERSION_SUFFIX=EDGE
 
   deploy-edge:
     needs: build-edge-image
