Fail deployment on non 200 status code

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -206,6 +206,6 @@ jobs:
     steps:
       - name: Trigger deployment
         run: |
-          curl -X POST -H "Content-Type: application/json" \
+          curl -X POST -H "Content-Type: application/json" --fail-with-body \
             -d '{"task": "wrench-serv-edge", "secret": "${{ secrets.DEPLOY_EDGE_WEBHOOK }}", "async":true}' \
             https://updater.edu.swampbuds.me/update
