--- a/package.yaml
+++ b/package.yaml
@@ -32,6 +32,7 @@ default-extensions:
     - NamedFieldPuns
     - NoImplicitPrelude
     - OverloadedStrings
+    - PartialTypeSignatures
     - RankNTypes
     - ScopedTypeVariables
     - TupleSections
