--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -163,6 +163,18 @@ jobs:
           files: ./dist/*
           token: ${{ secrets.RELEASE_GITHUB_TOKEN }}
 
+  # use `make release-image` to trigger it
+  deploy-release:
+    needs: publish-release
+    if: startsWith(github.ref, 'refs/tags/')
+    runs-on: ubuntu-latest
+    steps:
+      - name: Trigger deployment
+        run: |
+          curl -X POST -H "Content-Type: application/json" --fail-with-body \
+            -d '{"task": "wrench-serv", "secret": "${{ secrets.DEPLOY_EDGE_WEBHOOK }}", "async":true}' \
+            https://updater.edu.swampbuds.me/update
+
   build-edge-image:
     needs:
       - wrench
