--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -151,6 +151,10 @@ jobs:
       - uses: actions/download-artifact@v4
         with:
           path: dist
+          merge-multiple: true
+
+      - name: List downloaded artifacts
+        run: ls -la ./dist/
 
       - name: Create Release
         uses: softprops/action-gh-release@v2
@@ -160,7 +164,7 @@ jobs:
           draft: true
           prerelease: false
           generate_release_notes: true
-          files: ./dist/*
+          files: dist/**/*
           token: ${{ secrets.RELEASE_GITHUB_TOKEN }}
 
   # use `make release-image` to trigger it
