--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -166,6 +166,15 @@ jobs:
       - name: List downloaded artifacts
         run: ls -la ./dist/
 
+      - name: Prepare files with proper names
+        run: |
+          mkdir -p release_files
+          for file in dist/*; do
+            filename=$(basename "$file")
+            dirname=$(dirname "$file")
+            cp "$file" "release_files/$dirname-$filename"
+          done
+
       - name: Create Release
         uses: softprops/action-gh-release@v2
         with:
@@ -174,7 +183,8 @@ jobs:
           draft: true
           prerelease: false
           generate_release_notes: true
-          files: dist/**/*
+          files: |
+            release_files/**/*
           token: ${{ secrets.RELEASE_GITHUB_TOKEN }}
 
   # use `make release-image` to trigger it
