--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -142,11 +142,15 @@ jobs:
         run: |
           stack build --copy-bins --local-bin-path ./dist
 
+      - name: Prepare release archive
+        run: |
+          tar -czvf wrench-${{ runner.os }}-${{ runner.arch }}.tar.gz -C ./dist .
+
       - name: Upload Binary as Artifact
         uses: actions/upload-artifact@v4
         with:
           name: wrench-${{ runner.os }}-${{ runner.arch }}
-          path: ./dist/*
+          path: wrench-${{ runner.os }}-${{ runner.arch }}.tar.gz
 
   publish-release:
     needs:
@@ -160,20 +164,10 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/download-artifact@v4
         with:
-          path: dist
+          path: release
           merge-multiple: true
 
-      - name: List downloaded artifacts
-        run: ls -la ./dist/
-
-      - name: Prepare files with proper names
-        run: |
-          mkdir -p release_files
-          for file in dist/*; do
-            filename=$(basename "$file")
-            dirname=$(dirname "$file")
-            cp "$file" "release_files/$dirname-$filename"
-          done
+      - run: find ./release/
 
       - name: Create Release
         uses: softprops/action-gh-release@v2
@@ -184,7 +178,7 @@ jobs:
           prerelease: false
           generate_release_notes: true
           files: |
-            release_files/**/*
+            release/*
           token: ${{ secrets.RELEASE_GITHUB_TOKEN }}
 
   # use `make release-image` to trigger it
