--- a/wrench.cabal
+++ b/wrench.cabal
@@ -226,6 +226,7 @@ executable wrench-serv
     , aeson-casing
     , base >=4.7 && <5
     , base64
+    , cookie
     , data-default
     , directory
     , filepath
