WrenchServer refactoring. Win/Fail count. Asm hash.

--- a/package.yaml
+++ b/package.yaml
@@ -87,6 +87,8 @@ executables:
     dependencies:
       - base64
       - cookie
+      - cryptohash-sha1
+      - crypton
       - directory
       - http-api-data
       - http-conduit
