--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,7 @@ jobs:
         uses: rutajdash/prettier-cli-action@v1.0.0
         with:
           file_pattern: static/**/*.html
+          config_path: ./.prettierrc
 
       - name: Prettier Output
         if: ${{ failure() }}
